painstakenly migrate entirely to nio to make testing easier...